Nweb 93 fix sticky cta jumping (#373)
* ensure min app content height

* fix artwork detail layout and sticky cta

* fix sticky cta container

--- a/src/common/components/layout/layout.module.css
+++ b/src/common/components/layout/layout.module.css
@@ -1,5 +1,7 @@
 .mainLayout {
   @apply px-5;
+  /* 100vh - header height - footer height */
+  min-height: calc(100vh - 60px - 90px);
 }
 
 .header {
